# jan_2024_django3

./: .env  .gitignore  Dockerfile  docker-compose.yml  nginx.conf  package-lock.json  pyproject.toml  requirements.txt  setup.cfg  task.txt
apps/auth/: serializers.py  urls.py  views.py
apps/auto_parks/: views.py
apps/cars/: filter.py  managers.py  models.py  serializers.py  urls.py  views.py
apps/cars/migrations/: 0003_alter_carmodel_brand_alter_carmodel_price_and_more.py  0004_carmodel_body_type.py  0005_alter_carmodel_options_carmodel_auto_park.py
apps/users/: urls.py  views.py
apps/users/migrations/: 0001_initial.py  0002_alter_usermodel_is_active.py
backend/apps/auth/: views.py
backend/apps/auto_parks/: models.py  serializers.py  views.py
backend/apps/cars/: filter.py  models.py  serializers.py  views.py
backend/apps/users/: models.py  serializers.py  urls.py  views.py
backend/configs/: celery.py  settings.py  urls.py
backend/configs/extra_configs/: __init__.py  jwt_configs.py
backend/core/: models.py  paginations.py
backend/core/enums/: action_token_enum.py  regex_enum.py
backend/core/handlers/: error_handler.py
backend/core/services/: email_service.py
backend/templates/: recovery_confirm.html  spam.html
cars/: models.py  serializers.py  views.py
cars/migrations/: 0001_initial.py  0002_carmodel_created_at_carmodel_updated_at.py
client/: asset-manifest.json  index.html
client/static/js/: main.7c95f6b5.js  main.f6185e11.js  (+2 more)
configs/: settings.py  urls.py
configs/extra_configs/: __init__.py
core/services/: email_service.py  jwt_service.py
frontend/: package-lock.json  package.json
frontend/src/: App.js  index.js
templates/: base.html  test.html  token_to_restore.html
(+4 files in other folders)
